@@ -34,7 +34,8 @@ public class ManualStartController extends HttpServlet {
         response.setContentType("text/html;charset=UTF-8");
         try (PrintWriter out = response.getWriter()) {
             /* TODO output your page here. You may use following sample code. */
-            new ProcessBuilder("C:\\PathToExe\\MyExe.exe","-date " + request.getParameter("date")).start();
+            Runtime.getRuntime().exec("D:\\test.bat");
+            //new ProcessBuilder("D:\\test.bat").start();
         }
     }
 
